# cricket-data

./: README.md  pyproject.toml
cricket_data/: extract_callable.py  load_callable.py
dags/: pandas_example1.py
sql/: cricket.db  make_scores_table.sql
