[tool.poetry]
name = "cricket-data"
version = "0.1.0"
description = ""
authors = ["Ksenia Germanovich <ksenia.germanovich@ba.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
bs4 = "^0.0.1"
pandas = "^2.1.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
lxml = "^4.9.4"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
